# libCBF-cpp

./: CMakeLists.txt  README.md  base64.cpp  base64.h  cbf.cpp  cbf.h  cbflib.h  end.cpp  end.h
test-app/: test-app-cbf.cpp
win/: libexport.h
